--- a/src/UI Kit/colors-type.css
+++ b/src/UI Kit/colors-type.css
@@ -72,3 +72,33 @@ dd {
 .fonts dd:last-of-type {
   font-family: Conv_Montserrat-Regular;
 }
+
+.fonts dt:first-of-type,
+.fonts dd:first-of-type {
+  font-size: 24px;
+  line-height: 29px;
+  top: 145px;
+}
+
+.fonts dt:nth-of-type(2),
+.fonts dd:nth-of-type(2) {
+  font-size: 19px;
+  line-height: 23px;
+  top: 255px;
+}
+
+.fonts dt:nth-of-type(3),
+.fonts dd:nth-of-type(3) {
+  font-size: 12px;
+  line-height: 15px;
+  top: 353px;
+  text-transform: uppercase;
+}
+
+.fonts dt:last-of-type,
+.fonts dd:last-of-type {
+  font-size: 14px;
+  line-height: 24px;
+  top: 418px;
+  font-weight: normal;
+}
