--- a/src/UI Kit/form-elements.css
+++ b/src/UI Kit/form-elements.css
@@ -1,3 +1,16 @@
+:root {
+  --dark-shade-100: #1f2041;
+  --dark-shade-75: rgba(31, 32, 65, 0.75);
+  --dark-shade-50: rgba(31, 32, 65, 0.5);
+  --dark-shade-25: rgba(31, 32, 65, 0.25);
+  --dark-shade-5: rgba(31, 32, 65, 0.05);
+  --purple: #bc9cff;
+  --green: #6fcf97;
+  --select-border: #777;
+  --select-focus: blue;
+  --select-arrow: var(--select-border);
+}
+
 @font-face {
   font-family: 'Conv_Montserrat-Bold';
   src: url('../assets/fonts/Montserrat-Bold/Montserrat-Bold.eot');
@@ -24,9 +37,12 @@
   font-style: normal;
 }
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -42,16 +58,18 @@ img {
   top: 30px;
 }
 
+div {
+  position: absolute;
+}
+
 .left {
   left: 141px;
 }
 
 .text-field {
-  position: absolute;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  top: 143px;
   width: 320px;
 }
 
@@ -63,7 +81,7 @@ label,
 }
 
 .field-desc {
-  color: rgba(31, 32, 65, 0.5);
+  color: var(--dark-shade-50);
   margin-top: -3px;
 }
 
@@ -75,7 +93,89 @@ label {
 input {
   width: 320px;
   height: 44px;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  box-sizing: border-box;
+  border: 1px solid var(--dark-shade-25);
   border-radius: 4px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  padding-left: 15px;
+  color: var(--dark-shade-75);
+  font-family: Conv_Montserrat-Regular;
 }
+.mail {
+  top: 143px;
+}
+.mail input {
+  line-height: 18px;
+  color: var(--dark-shade-25);
+}
+
+.active {
+  top: 227.44px;
+}
+
+.active input {
+  border: 1px solid var(--dark-shade-50);
+  color: var(--dark-shade-75);
+}
+
+.dropdown {
+  top: 311.44px;
+}
+
+.dropdown select {
+  /* A reset of styles, including removing the default dropdown arrow */
+  appearance: none;
+  /* Additional resets for further consistency */
+  width: 100%;
+  cursor: inherit;
+  outline: none;
+  /* To fill space of div.select */
+  padding-left: 15px;
+  /* Apply styles of <input> */
+  width: 320px;
+  height: 44px;
+  border: 1px solid var(--dark-shade-25);
+  border-radius: 4px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: var(--dark-shade-75);
+  font-family: Conv_Montserrat-Regular;
+}
+
+/* to gain removal of the arrow for lower IE versions*/
+.dropdown select::-ms-expand {
+  display: none;
+}
+
+.dropdown .select {
+  cursor: pointer;
+  display: grid;
+  grid-template-areas: 'select';
+  position: relative;
+}
+
+/* .select::after {
+  content: '';
+  width: 0.8em;
+  height: 0.5em;
+  background-color: var(--select-arrow);
+  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+  justify-self: end;
+}
+
+select,
+.select:after {
+  grid-area: select;
+}
+
+select:focus + .focus {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  border: 2px solid var(--select-focus);
+  border-radius: inherit;
+} */
