--- a/src/UI Kit/form-elements.css
+++ b/src/UI Kit/form-elements.css
@@ -90,7 +90,9 @@ label {
   margin-bottom: 5px;
 }
 
-input {
+input,
+select,
+option {
   width: 320px;
   height: 44px;
   border: 1px solid var(--dark-shade-25);
@@ -102,9 +104,11 @@ input {
   color: var(--dark-shade-75);
   font-family: Conv_Montserrat-Regular;
 }
+
 .mail {
   top: 143px;
 }
+
 .mail input {
   line-height: 18px;
   color: var(--dark-shade-25);
@@ -123,25 +127,15 @@ input {
   top: 311.44px;
 }
 
+.dropdown .select-wrapper {
+  position: relative;
+}
+
 .dropdown select {
   /* A reset of styles, including removing the default dropdown arrow */
   appearance: none;
-  /* Additional resets for further consistency */
-  width: 100%;
-  cursor: inherit;
-  outline: none;
-  /* To fill space of div.select */
-  padding-left: 15px;
-  /* Apply styles of <input> */
-  width: 320px;
-  height: 44px;
-  border: 1px solid var(--dark-shade-25);
-  border-radius: 4px;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  color: var(--dark-shade-75);
-  font-family: Conv_Montserrat-Regular;
+  cursor: pointer;
+  -webkit-appearance: none;
 }
 
 /* to gain removal of the arrow for lower IE versions*/
@@ -149,33 +143,73 @@ input {
   display: none;
 }
 
-.dropdown .select {
-  cursor: pointer;
-  display: grid;
-  grid-template-areas: 'select';
-  position: relative;
-}
-
-/* .select::after {
+.select-wrapper::before,
+.select-wrapper::after {
   content: '';
-  width: 0.8em;
-  height: 0.5em;
-  background-color: var(--select-arrow);
-  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-  justify-self: end;
-}
-
-select,
-.select:after {
-  grid-area: select;
-}
-
-select:focus + .focus {
   position: absolute;
-  top: -1px;
-  left: -1px;
-  right: -1px;
-  bottom: -1px;
-  border: 2px solid var(--select-focus);
-  border-radius: inherit;
-} */
+  bottom: 20px;
+  width: 9px;
+  height: 2px;
+  background-color: var(--dark-shade-50);
+}
+
+.select-wrapper::before {
+  right: 21px;
+  transform: rotate(45deg);
+}
+
+.select-wrapper::after {
+  right: 16px;
+  transform: rotate(-45deg);
+}
+
+select:focus {
+  border-color: var(--dark-shade-50);
+  border-radius: 2px;
+}
+
+.select-wrapper:focus-within:before,
+.select-wrapper:focus-within:after {
+  background-color: var(--dark-shade-75);
+}
+
+.masked {
+  top: 398px;
+}
+
+input[type='date'] {
+  text-transform: uppercase;
+}
+
+.masked input {
+  color: var(--dark-shade-25);
+}
+
+input[type='date']:before {
+  content: attr(placeholder) !important;
+  color: #aaa;
+  margin-right: 0.5em;
+}
+input[type='date']:focus:before,
+input[type='date']:valid:before {
+  content: '';
+}
+
+.date-drop-1,
+.date-drop-2 {
+  top: 502px;
+  width: 150px;
+  display: block;
+}
+
+.date-drop-1 input,
+.date-drop-2 input {
+  line-height: 18px;
+}
+
+.wrapper {
+  width: 320px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
